[project]
name = "image-captioning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "absl-py>=2.1.0",
    "datasets>=3.3.0",
    "evaluate>=0.4.3",
    "gradio>=5.16.0",
    "nltk>=3.9.1",
    "rouge-score>=0.1.2",
    "scikit-learn>=1.6.1",
    "six>=1.17.0",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "transformers[torch]==4.49.0",
]
